[package]
name = "blastkids"
version = "0.1.4"
edition = "2021"
license = "MIT"
description = "Derive BLS12-381 child keys using Blastkids."
homepage = "https://github.com/DougAnderson444/blastkids"
documentation = "https://docs.rs/blastkids"
repository = "https://github.com/DougAnderson444/blastkids"
readme = "README.md"
keywords = ["bls12-381", "derive", "derivation"]
categories = ["cryptography"]
authors = ["Doug Anderson <DougAnderson444@peerpiper.io>"]

[dependencies]
bls12_381_plus = "0.8.5"
hkdf = "0.12.3"
sha2 = "0.10.7"
thiserror = "1.0.48"
secrecy = { version = "0.8.0" }

[dev-dependencies]
hex = "0.4.3"

[patch.crates-io]
bls12_381_plus = { git = "https://github.com/DougAnderson444/bls12_381_plus", branch = "wasm" } 
